--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,27 +5,30 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.0.0
 
 dependencies:
   flutter:
     sdk: flutter
-
+  url_launcher: ^6.3.0
   cupertino_icons: ^1.0.8
 
-  # HIVE
+  # HIVE (Database Lokal)
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
 
-  # Untuk generate TypeAdapter
-  hive_generator: ^2.0.1
-  build_runner: ^2.4.13
+  # FORMAT TANGGAL & WAKTU (Penting untuk Scheduled Task)
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+  # CODE GENERATOR (Wajib ditaruh di sini, bukan di dependencies atas)
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.13
 
 flutter:
   uses-material-design: true
