--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   url_launcher: ^6.3.0
   cupertino_icons: ^1.0.8
 
+  youtube_player_flutter: ^9.0.1
   # HIVE (Database Lokal)
   hive: ^2.2.3
   hive_flutter: ^1.1.0
