--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,22 +14,28 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   youtube_player_flutter: ^9.0.1
+
   # HIVE (Database Lokal)
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
-
-  # FORMAT TANGGAL & WAKTU (Penting untuk Scheduled Task)
+  
+  # FORMAT TANGGAL & WAKTU
   intl: ^0.19.0
+
+  # ALARM
+  alarm: ^5.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
 
-  # CODE GENERATOR (Wajib ditaruh di sini, bukan di dependencies atas)
+  # CODE GENERATOR
   hive_generator: ^2.0.1
   build_runner: ^2.4.13
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/alarm.mp3
