--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   youtube_player_flutter: ^9.0.1
-
+  permission_handler: ^11.3.0
   # HIVE (Database Lokal)
   hive: ^2.2.3
   hive_flutter: ^1.1.0
